# emstereolibpy

./: .gitignore  LICENSE  README.md  conf.py  emstereolibpy.py  index.rst  requirements.txt  setup.cfg  test_emstereolibpy.py
.github/workflows/: main.yml
notebooks/: tracking_pixel_to_global.ipynb
src/: test_emstereolibpy.py
src/emstereolibpy/: __init__.py  emstereolibpy.py
src/notebooks/: tracking_pixel_to_global.ipynb
src/test_files/: epipolar_points.csv
