[metadata]
name = emstereolibpy
version = 0.0.1
author = Dan Marrable
author_email = d.marrable@curtin.edu.au
description = Python wrapper for the StereoLib C library by SeaGIS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marrabld/emstereolibpy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
